...
        )}

        {/* PRÓXIMO JOGO */}
        {
          <View style={styles.section}>
            <View style={styles.sectionTitleRow}>
              <Text style={styles.sectionTitle}>Próximo Jogo</Text>
            </View>
            {(nextMatch && (
              <MatchCard
                match={nextMatch}
                homeLogo={getTeamLogo(getHomeTeamExternalId(nextMatch)) || ""}
                awayLogo={getTeamLogo(getAwayTeamExternalId(nextMatch)) || ""}
...
